--- a/style.css
+++ b/style.css
@@ -1,1 +1,7 @@
 @charset "UTF-8";
+p {
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 22px;
+    text-align: center;
+    text-indent: 40 px;
+}
